--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "build/index.js",
 	"type": "module",
 	"scripts": {
-		"test": "node source/test.js",
+		"test:unit": "node source/test.js",
+		"test:integration": "vite --force --host",
 		"build": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --minify",
 		"develop": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --sourcemap --watch",
 		"prepare": "npm run build"
@@ -18,6 +19,7 @@
 	},
 	"devDependencies": {
 		"esbuild": "^0.20.2",
-		"node-localstorage": "^3.0.5"
+		"node-localstorage": "^3.0.5",
+		"vite": "^5.2.10"
 	}
 }
