--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 	},
 	"devDependencies": {
 		"esbuild": "^0.20.2",
-		"node-localstorage": "^3.0.5",
-		"vite": "^5.2.10"
+		"vite": "^5.2.10",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"node-localstorage": "^3.0.5"
 	}
 }
