--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 	},
 	"devDependencies": {
 		"esbuild": "^0.20.2",
-		"vite": "^5.2.10",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.34.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"node-localstorage": "^3.0.5"
+		"node-localstorage": "^3.0.5",
+		"prettier": "^3.2.5",
+		"react-dom": "^18.2.0",
+		"vite": "^5.2.10"
 	}
 }
