Mark react as external

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "build/index.js",
 	"type": "module",
 	"scripts": {
-		"build": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --minify",
-		"develop": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --sourcemap --watch",
+		"build": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --external:react --minify",
+		"develop": "esbuild source/index.js --outfile=build/index.js --bundle --format=esm --external:react --sourcemap --watch",
 		"prepare": "npm run build",
 		"test:unit": "node --test test/unit/index.js",
 		"test:manual": "vite --force --host"
