--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,19 @@
 {
 	"compilerOptions": {
 		"jsx": "react-jsx",
-		"checkJs": true
+		"checkJs": true,
+		// Generate d.ts files
+		"declaration": true,
+		// "noEmit": false,
+		// This compiler run should
+		// only output d.ts files
+		// "emitDeclarationOnly": true,
+		// Types should go into this directory.
+		// Removing this would place the .d.ts files
+		// next to the .js files
+		"outDir": "dist",
+		// go to js file when using IDE functions like
+		// "Go to Definition" in VSCode
+		"declarationMap": true
 	}
 }
