--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"include": ["source/**/*"],
 	"compilerOptions": {
 		"allowJs": true,
+		"checkJs": true,
 		"module": "ESNext",
 		"declaration": true,
 		"emitDeclarationOnly": true,
