--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react": "^18.3.1"
 	},
 	"devDependencies": {
+		"@types/react": "^18.3.3",
 		"esbuild": "^0.20.2",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.34.1",
